Q3/k8s/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortenurl-db-${CI_COMMIT_REF_SLUG}
  namespace: default
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: shortenurl-db-${CI_COMMIT_REF_SLUG}
